--- a/inde.html
+++ b/inde.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3 Meses Juntos meu amor !</title>
-
+    <link rel="shortcut icon" href="png-transparent-blue-heart.png">
     <style>
         body {
             background-color: red;
